Resolve #AG358 - Fix styling to remove extra scrollbar

--- a/Agiil.Web.Client/src/scss/_ThreeColumnLayout_Base.scss
+++ b/Agiil.Web.Client/src/scss/_ThreeColumnLayout_Base.scss
@@ -21,7 +21,7 @@ body {
 .application_menu {
   padding-left: $side_padding;
   padding-right: $side_padding;
-  margin-bottom: -$footer-height - 1px;
+  margin-bottom: -$footer-height;
 }
 .main_content_asides {
   box-sizing: border-box;
